nohup.out
  File "password-evolution.py", line 11
    return 'Welcome to the hands-on lab for an evolution of password
                                                                   ^
SyntaxError: EOL while scanning string literal
  File "password-evolution.py", line 11
    return 'Welcome to the hands-on lab for an evolution of password
                                                                   ^
SyntaxError: EOL while scanning string literal
  File "password-evolution.py", line 11
    return 'Welcome to the hands-on lab for an evolution of password
                                                                   ^
SyntaxError: EOL while scanning string literal
 * Serving Flask app "password-evolution" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:5000/ (Press CTRL+C to quit)
192.168.1.199 - - [16/May/2022 10:04:24] "[37mGET / HTTP/1.1[0m" 200 -
192.168.1.199 - - [16/May/2022 10:04:24] "[33mGET /favicon.ico HTTP/1.1[0m" 404 -
 * Serving Flask app "password-evolution" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
Traceback (most recent call last):
  File "password-evolution.py", line 16, in <module>
    app.run(host='0.0.0.0', port=5000, ssl_context='adhoc')
  File "/home/devasc/.local/lib/python3.8/site-packages/flask/app.py", line 990, in run
    run_simple(host, port, self, **options)
  File "/home/devasc/.local/lib/python3.8/site-packages/werkzeug/serving.py", line 1052, in run_simple
    inner()
  File "/home/devasc/.local/lib/python3.8/site-packages/werkzeug/serving.py", line 996, in inner
    srv = make_server(
  File "/home/devasc/.local/lib/python3.8/site-packages/werkzeug/serving.py", line 847, in make_server
    return ThreadedWSGIServer(
  File "/home/devasc/.local/lib/python3.8/site-packages/werkzeug/serving.py", line 740, in __init__
    HTTPServer.__init__(self, server_address, handler)
  File "/usr/lib/python3.8/socketserver.py", line 452, in __init__
    self.server_bind()
  File "/usr/lib/python3.8/http/server.py", line 138, in server_bind
    socketserver.TCPServer.server_bind(self)
  File "/usr/lib/python3.8/socketserver.py", line 466, in server_bind
    self.socket.bind(self.server_address)
OSError: [Errno 98] Address already in use
192.168.1.199 - - [16/May/2022 10:10:37] "[37mGET / HTTP/1.1[0m" 200 -
192.168.1.199 - - [16/May/2022 10:10:38] "[37mGET / HTTP/1.1[0m" 200 -
192.168.1.199 - - [16/May/2022 10:10:38] "[37mGET / HTTP/1.1[0m" 200 -
192.168.1.199 - - [16/May/2022 10:12:07] "[37mGET / HTTP/1.1[0m" 200 -
192.168.1.199 - - [16/May/2022 10:12:16] "[37mGET / HTTP/1.1[0m" 200 -
Traceback (most recent call last):
  File "password-evolution.py", line 17, in <module>
    def signup_v1():
  File "/home/devasc/.local/lib/python3.8/site-packages/flask/app.py", line 1315, in decorator
    self.add_url_rule(rule, endpoint, f, **options)
  File "/home/devasc/.local/lib/python3.8/site-packages/flask/app.py", line 98, in wrapper_func
    return f(self, *args, **kwargs)
  File "/home/devasc/.local/lib/python3.8/site-packages/flask/app.py", line 1249, in add_url_rule
    raise TypeError(
TypeError: Allowed methods have to be iterables of strings, for example: @app.route(..., methods=["POST"])
Traceback (most recent call last):
  File "password-evolution.py", line 17, in <module>
    def signup_v1():
  File "/home/devasc/.local/lib/python3.8/site-packages/flask/app.py", line 1315, in decorator
    self.add_url_rule(rule, endpoint, f, **options)
  File "/home/devasc/.local/lib/python3.8/site-packages/flask/app.py", line 98, in wrapper_func
    return f(self, *args, **kwargs)
  File "/home/devasc/.local/lib/python3.8/site-packages/flask/app.py", line 1249, in add_url_rule
    raise TypeError(
TypeError: Allowed methods have to be iterables of strings, for example: @app.route(..., methods=["POST"])
Traceback (most recent call last):
  File "password-evolution.py", line 17, in <module>
    def signup_v1():
  File "/home/devasc/.local/lib/python3.8/site-packages/flask/app.py", line 1315, in decorator
    self.add_url_rule(rule, endpoint, f, **options)
  File "/home/devasc/.local/lib/python3.8/site-packages/flask/app.py", line 98, in wrapper_func
    return f(self, *args, **kwargs)
  File "/home/devasc/.local/lib/python3.8/site-packages/flask/app.py", line 1249, in add_url_rule
    raise TypeError(
TypeError: Allowed methods have to be iterables of strings, for example: @app.route(..., methods=["POST"])
 * Serving Flask app "password-evolution" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:5000/ (Press CTRL+C to quit)
127.0.0.1 - - [16/May/2022 10:28:09] "[33mPOST /signup/v1 HTTP/1.1[0m" 404 -
192.168.1.199 - - [16/May/2022 10:28:32] "[37mGET / HTTP/1.1[0m" 200 -
127.0.0.1 - - [16/May/2022 10:29:32] "[33mPOST /signup/v1 HTTP/1.1[0m" 404 -
192.168.1.149 - - [16/May/2022 10:29:59] "[33mPOST /signup/v1 HTTP/1.1[0m" 404 -
 * Serving Flask app "password-evolution" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:5000/ (Press CTRL+C to quit)
192.168.1.149 - - [16/May/2022 10:32:36] "[33mPOST /signup/v1 HTTP/1.1[0m" 404 -
 * Serving Flask app "password-evolution" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:5000/ (Press CTRL+C to quit)
192.168.1.149 - - [16/May/2022 10:34:31] "[33mPOST /signup/v1 HTTP/1.1[0m" 404 -
 * Serving Flask app "password-evolution" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:5000/ (Press CTRL+C to quit)
127.0.0.1 - - [16/May/2022 10:37:31] "[33mPOST /signup/v1 HTTP/1.1[0m" 404 -
 * Serving Flask app "password-evolution" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:5000/ (Press CTRL+C to quit)
127.0.0.1 - - [16/May/2022 10:40:04] "[33mPOST /signup/v1 HTTP/1.1[0m" 404 -
 * Serving Flask app "password-evolution" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:5000/ (Press CTRL+C to quit)
127.0.0.1 - - [16/May/2022 10:41:45] "[33mPOST /signup/v1 HTTP/1.1[0m" 404 -
127.0.0.1 - - [16/May/2022 10:42:21] "[37mGET / HTTP/1.1[0m" 200 -
127.0.0.1 - - [16/May/2022 10:42:37] "[33mGET /login HTTP/1.1[0m" 404 -
127.0.0.1 - - [16/May/2022 10:44:08] "[33mPOST /signup/v1 HTTP/1.1[0m" 404 -
 * Serving Flask app "password-evolution" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:5000/ (Press CTRL+C to quit)
127.0.0.1 - - [16/May/2022 10:47:00] "[33mPOST /signup/v1 HTTP/1.1[0m" 404 -
Traceback (most recent call last):
  File "password-evolution.py", line 17, in <module>
    def signup_v1():
  File "/home/devasc/.local/lib/python3.8/site-packages/flask/app.py", line 1315, in decorator
    self.add_url_rule(rule, endpoint, f, **options)
  File "/home/devasc/.local/lib/python3.8/site-packages/flask/app.py", line 98, in wrapper_func
    return f(self, *args, **kwargs)
  File "/home/devasc/.local/lib/python3.8/site-packages/flask/app.py", line 1249, in add_url_rule
    raise TypeError(
TypeError: Allowed methods have to be iterables of strings, for example: @app.route(..., methods=["POST"])
 * Serving Flask app "password-evolution" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:5000/ (Press CTRL+C to quit)
127.0.0.1 - - [16/May/2022 10:50:33] "[33mPOST /signup/v1 HTTP/1.1[0m" 404 -
